--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
-  <title>Virtual Folio - Portfolio HTML5 Template</title>
+  <title>Portfolio - Abhishek V</title>
 
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   
@@ -37,7 +37,7 @@
     <span class="ti-arrow-up"></span>
   </div>
   
-  <!-- Setting button -->
+<!--   <!-- Setting button -->
   <div class="config">
     <div class="template-config">
       <!-- Settings -->
@@ -70,7 +70,7 @@
         <option value="blog-minibar">Blog (Minibar)</option>
       </select>
     </div>
-  </div>
+  </div> -->
   
   <div class="vg-page page-home" id="home" style="background-image: url(assets/img/bg_image_1.jpg)">
     <!-- Navbar -->
@@ -126,7 +126,11 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Abhishek Varshney</h1>
           <h5 class="fg-theme mb-3">Developer</h5>
-          <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form but the majority have suffered alteration in some</p>
+          <p class="text-muted">Passionate Software Engineer with 2+ years of experience in developing Python and
+web app solutions to client requirements. Skilled at writing clear, concise code that
+is easy to maintain and troubleshoot. Experienced in working with both small and
+large teams across multiple projects. Able to work independently of remote
+locations or in office environments as needed by the company.</p>
           <ul class="theme-list">
             <li><b>From:</b> Jaipur, Rajasthan</li>
             <li><b>Lives In:</b> Pune, Maharashtra</li>
@@ -146,21 +150,21 @@
           <div class="px-lg-3">
             <h4 class="wow fadeInUp">Coding skills</h4>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">JavaScript</span>
+              <span class="caption">Python</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" style="width: 86%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">86%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">PHP</span>
+              <span class="caption">Cloud Platforms</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
+                <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">60%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">HTML + CSS</span>
+              <span class="caption">ReactJS + NodeJS</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">100%</div>
+                <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">60%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
