--- a/index.html
+++ b/index.html
@@ -132,32 +132,32 @@ locations or in office environments as needed by the company.</p>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Phyton</span>
+              <span class="caption">Problem Solving</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">90%</div>
+                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">70%</div>
               </div>
             </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="px-lg-3">
-            <h4 class="wow fadeInUp">Design Skills</h4>
+            <h4 class="wow fadeInUp">Tools & Technologies</h4>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">UI / UX Design</span>
+              <span class="caption">Version Control - Gitlab, Github</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 92%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">92%</div>
+                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">80%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Web Design</span>
+              <span class="caption">Airflow</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 99%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">99%</div>
+                <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">70%</div>
               </div>
             </div>
             <div class="progress-wrapper wow fadeInUp">
-              <span class="caption">Logo Design</span>
+              <span class="caption">Jenkins</span>
               <div class="progress">
-                <div class="progress-bar" role="progressbar" style="width: 79%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">79%</div>
+                <div class="progress-bar" role="progressbar" style="width: 65%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">65%</div>
               </div>
             </div>
           </div>
@@ -170,39 +170,40 @@ locations or in office environments as needed by the company.</p>
           <h2 class="fw-normal">Education</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2010</div>
+              <div class="title">2017 - 2021</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                <h5>B.Tech in Computer Science Engineering</h5>
+                <small class="fg-theme">Jaipur Engineering College and Research Centre, Jaipur, Raj</small>
+                <p>Aggregate - 75%</p>
               </div>
             </li>
             <li>
-              <div class="title">2009</div>
+              <div class="title">2016</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                <h5>Senior Secondary</h5>
+                <small class="fg-theme">Maheshwari Public School, Jaipur (CBSE) </small>
+                <p>12th Boards CBSE - 85.4%</p>
               </div>
             </li>
             <li>
-              <div class="title">2008</div>
+              <div class="title">2014</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                <h5>Higher Secondary</h5>
+                <small class="fg-theme">Maheshwari Public School, Jaipur (CBSE) </small>
+                <p>10th Boards CBSE - 85.5% (9 CGPA)</p>
               </div>
             </li>
           </ul>
         </div>
+	      
         <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
           <h2 class="fw-normal">Experience</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2017 - Current</div>
+              <div class="title">Aug 2021 - Current</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
+                <h5>Systems Engineer</h5>
+                <small class="fg-theme">Tata Consultancy Services, Pune</small>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
               </div>
             </li>
